[server]: Configure Java 21 with nixpacks for Railway